force-app/main/default/objects/AuditLoation__c/AuditLoation__c.object-meta.xml
<CustomObject>
    <label>INV Check Location</label>
    <nameField>
        <displayFormat>ADLC-{000000}</displayFormat>
        <label>Audit Location ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>INV Check Location</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>