force-app/main/default/objects/AuditLoation__c/fields/ActualStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>ActualStartDateTime__c</fullName>
    <label>Actual Start Date/Time</label>
    <type>DateTime</type>
</CustomField>