force-app/main/default/objects/AuditLoation__c/fields/LocatorD__c.field-meta.xml
<CustomField>
    <fullName>LocatorD__c</fullName>
    <label>Locator ID</label>
    <referenceTo>LOCATOR__c</referenceTo>
    <relationshipName>LocatorID</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>