force-app/main/default/objects/AuditLoation__c/fields/LocatorDetail__c.field-meta.xml
<CustomField>
    <fullName>LocatorDetail__c</fullName>
    <formula>LocatorD__r.Summary__c</formula>
    <label>Locator Detail</label>
    <type>Text</type>
</CustomField>