force-app/main/default/objects/AuditLoation__c/fields/ScheduleEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduleEndDateTime__c</fullName>
    <label>Schedule End Date/Time</label>
    <type>DateTime</type>
</CustomField>