force-app/main/default/objects/AuditLoation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AuditID__c</columns>
    <columns>LocatorD__c</columns>
    <columns>LocatorLayer__c</columns>
    <columns>LocatorDetail__c</columns>
    <columns>Status__c</columns>
    <columns>ScheduleStartDateTime__c</columns>
    <columns>ScheduleEndDateTime__c</columns>
    <columns>ActualStartDateTime__c</columns>
    <columns>ActualEndDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>